<?xml version="1.0" encoding="utf-8"?>
<!-- Layout of Login Screen -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/crisis_black"
    android:orientation="vertical" >

    <!-- Username Label -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp" >

    	<TextView
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="30dp"
        	android:text="@string/username"
        	android:textColor="@color/crisis_white"
        	android:textSize="16sp" />

    	<EditText
        	android:id="@+id/edit_username"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="30dp"
        	android:layout_marginRight="30dp"
        	android:layout_marginTop="5dip"
        	android:background="@color/crisis_white"
        	android:hint="@string/edit_username"
        	android:inputType="text"
        	android:singleLine="true" />

    <!-- Password Label -->

		<TextView
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="30dp"
        	android:layout_marginRight="30dp"
        	android:layout_marginTop="30dp"
        	android:text="@string/password"
        	android:textColor="@color/crisis_white"
        	android:textSize="16sp" />

		<EditText
        	android:id="@+id/edit_password"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="30dp"
        	android:layout_marginRight="30dp"
        	android:layout_marginTop="5dip"
        	android:background="@color/crisis_white"
        	android:hint="@string/edit_password"
        	android:inputType="textPassword"
        	android:singleLine="true" />
    </LinearLayout>

    <!-- Login button -->
    <Button 
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:background="@color/crisis_white"
        android:textColor="@color/crisis_black"
        android:text="@string/btn_login"
        android:textSize="16sp"/>


    <!-- Link to Registration Screen -->

    <TextView
        android:id="@+id/register_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:gravity="center"
        android:text="@string/register_here"
        android:textColor="@color/crisis_white"
        android:textSize="16sp"
        android:clickable="true" />

</LinearLayout><!-- Login Form Ends -->
